--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -1,21 +1,31 @@
 .header-wrapper {
   padding: 1rem;
+  width: 100%;
+  height: 750px;
+  background-image: url("../../assest/images/modelos-ropa4.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+.header-wrapper .intro {
+  position: relative;
+  top: 200px;
+}
+.header-wrapper .intro .text {
+  text-align: center;
 }
 .header-wrapper .menu {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-}
-.header-wrapper .menu .nav-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  width: 100%;
 }
 .header-wrapper .menu .nav-bar .option-menu {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
 }
 .header-wrapper .menu .nav-bar .option-menu .logo img {
