--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -1,18 +1,31 @@
 .header-wrapper{
     padding: 1rem;
+    width: 100%;
+    height: 750px;
+    background-image: url('../../assest/images/modelos-ropa4.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    .intro{
+        position: relative;
+        top: 200px;
+        .text{
+            text-align: center;
+        }
+    }
     .menu{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
+        width: 100%;
+        //padding: 1rem;
         .nav-bar{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
             .option-menu{
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                align-items: center;
                 gap: 1rem;
                 .logo{
                     img{
