--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -14,12 +14,19 @@
 .header-wrapper .intro .text {
   text-align: center;
 }
+.header-wrapper .fixed {
+  position: fixed;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
 .header-wrapper .menu {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  padding: 1rem;
 }
 .header-wrapper .menu .nav-bar .option-menu {
   display: flex;
