--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -1,48 +1,23 @@
-.header-wrapper{
-    padding: 1rem;
-    width: 100%;
-    height: 750px;
-    background-image: url('../../assest/images/modelos-ropa4.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    .intro{
-        position: relative;
-        top: 200px;
-        .text{
-            text-align: center;
-        }
+//Header
+@import 'partials/components/header';
+
+.ultimos-productos{
+    display: flex;
+    flex-direction: column;
+    .section-header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-    .fixed{
-        position: fixed;
-        z-index: 1;
-        background-color: white;
-        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    }
-    .menu{
+    .card-container{
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        width: 100%;
-        padding: 1rem;
-        .nav-bar{
-            .option-menu{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                gap: 1rem;
-                .logo{
-                    img{
-                        width: 100px;
-                        height: 100px;
-                        border-radius: 50%;
-                    }
-                }
-                .option{
-                    text-align: center;
-                    list-style: none;
+        justify-content: space-evenly;
+        .card{
+            .card-img{
+                img{
+                    width: 100%;
+                    height: 100%;
                 }
             }
         }
