--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -113,5 +113,53 @@ main .ultimos-productos .card-container .card .info-producto .link-producto a {
 main .ultimos-productos .card-container .card .info-producto .link-producto a:hover {
   color: blue;
 }
+main .categorias {
+  height: 1000px;
+}
+main .categorias .cat-container {
+  margin: 0 auto;
+  height: 100%;
+  width: 70%;
+  display: grid;
+  grid-template-areas: "head head head" "buzos buzos remeras" "buzos buzos remeras" "buzos buzos gorros" "buzos buzos gorros";
+}
+main .categorias .cat-container .section-header {
+  grid-area: head;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+main .categorias .cat-container .cat1 {
+  grid-area: buzos;
+  margin-right: 20px;
+  background-image: url(../../../../assest/images/buzo3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+main .categorias .cat-container .cat2 {
+  grid-area: remeras;
+  margin-bottom: 10px;
+  background-image: url(../../../../assest/images/remeras1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+main .categorias .cat-container .cat3 {
+  grid-area: gorros;
+  margin-top: 10px;
+  background-image: url(../../../../assest/images/gorras2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+main .categorias .cat-container .cat-info {
+  position: relative;
+  top: 40px;
+  left: 20px;
+  background-color: #fff;
+  font-size: 1.5em;
+  padding: 1rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
