--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -7,5 +7,7 @@
 
 //Header
 @import 'partials/components/header';
+//Footer
+@import 'partials/components/footer';
 //Index
 @import 'partials/components/index';
