--- a/sass/scss/partials/components/_index.scss
+++ b/sass/scss/partials/components/_index.scss
@@ -1,11 +1,11 @@
 main{
-    .ultimos-productos{
+    .productos{
         padding: 1rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        width: 80%;
+        width: 1200px;
         margin: 0 auto;
         .section-header{
             display: flex;
@@ -61,10 +61,12 @@ main{
     }
     .categorias{
         height: 1000px;
+        width: 1050px;
+        margin: 0 auto;
+        margin-bottom: 4rem;
         .cat-container{
-            margin: 0 auto;
             height: 100%;
-            width: 70%;
+            width: 100%;
             display: grid;
             grid-template-areas: 
             'head head head'
@@ -82,25 +84,48 @@ main{
             }
             .cat1{
                 grid-area: buzos;
+                text-decoration: none;
+                color: #000;
                 margin-right: 20px;
                 background-image: url(../../../../assest/images/buzo3.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
+                &:hover{
+                    transform: scale(1.1,1.1);
+                    transition: 0.5s;
+                }
+                .info-extra{
+                    position: relative;
+                    margin-left: 150px;
+                    top: 300px;
+                }
             }
             .cat2{
                 grid-area: remeras;
+                text-decoration: none;
+                color: #000;
                 margin-bottom: 10px;
                 background-image: url(../../../../assest/images/remeras1.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
+                &:hover{
+                    transform: scale(1.1,1.1);
+                    transition: 0.5s;
+                }
             }
             .cat3{
                 grid-area: gorros;
+                text-decoration: none;
+                color: #000;
                 margin-top: 10px;
                 background-image: url(../../../../assest/images/gorras2.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
+                &:hover{
+                    transform: scale(1.1,1.1);
+                    transition: 0.5s;
+                }
             }
             .cat-info{
                 position: relative;
@@ -109,6 +134,12 @@ main{
                 background-color: #fff;
                 font-size: 1.5em;
                 padding: 1rem;
+            }
+            .info-extra{
+                display: inline;
+                position: relative;
+                top: 150px;
+                color: #fff;
             }
         }
     }
