--- a/sass/scss/partials/components/_header.scss
+++ b/sass/scss/partials/components/_header.scss
@@ -1,10 +1,7 @@
 .header-wrapper{
     width: 100%;
     height: 750px;
-    background-image: url('../../assest/images/modelos-ropa4.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+    @include background-img(url('../../assest/images/modelos-ropa4.jpg'), no-repeat, cover, center center);
     .intro{
         position: relative;
         top: 200px;
@@ -20,20 +17,17 @@
         #nav-header-link{
             color: black;
         }
+        .carrito{
+            color: black
+        }
     }
     .menu{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
+        @include flex(row, space-around, center);
         width: 100%;
         padding: 1rem;
         .nav-bar{
             .option-menu{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
+                @include flex(row, center, center);
                 gap: 1rem;
                 .logo{
                     img{
@@ -53,6 +47,12 @@
                         }
                     }
                 }
+            }
+        }
+        .carrito{
+            .boton-carrito{
+                @include flex (row, center ,center);
+                color: white;
             }
         }
     }
