agrego mas directorios para la estructura del proyecto, comienzo a aplicar modulos en el codigo de javascript añadiendo el modulo de scrollHeaderEvent y darkMode

--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -180,7 +180,7 @@ main .categorias .cat-container .cat1, main .categorias .cat-container .cat2, ma
   text-decoration: none;
   color: #000;
   margin-right: 20px;
-  background-image: url(../../../../assest/images/buzo3.jpg);
+  background-image: url("../../assest/images/buzo3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -197,7 +197,7 @@ main .categorias .cat-container .cat1 .info-extra, main .categorias .cat-contain
 main .categorias .cat-container .cat2, main .categorias .cat-container .cat3 {
   grid-area: remeras;
   margin-bottom: 10px;
-  background-image: url(../../../../assest/images/remeras1.jpg);
+  background-image: url("../../assest/images/remeras1.jpg");
 }
 main .categorias .cat-container .cat2:hover, main .categorias .cat-container .cat3:hover {
   transform: scale(1.1, 1.1);
@@ -211,7 +211,8 @@ main .categorias .cat-container .cat2 .info-extra, main .categorias .cat-contain
 main .categorias .cat-container .cat3 {
   grid-area: gorros;
   margin-top: 10px;
-  background-image: url(../../../../assest/images/gorras2.jpg);
+  margin-bottom: 0;
+  background-image: url("../../assest/images/gorras2.jpg");
 }
 main .categorias .cat-container .cat3:hover {
   transform: scale(1.1, 1.1);
