--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -175,35 +175,35 @@ main .categorias .cat-container .section-header {
   flex-direction: column;
   margin-bottom: 30px;
 }
-main .categorias .cat-container .cat1, main .categorias .cat-container .cat2, main .categorias .cat-container .cat3 {
+main .categorias .cat-container .cat1 {
   grid-area: buzos;
   text-decoration: none;
   color: #000;
   margin-right: 20px;
-  background-image: url(../../../../assest/images/buzo3.jpg);
+  background-image: url("../../assest/images/buzo3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-main .categorias .cat-container .cat1:hover, main .categorias .cat-container .cat2:hover, main .categorias .cat-container .cat3:hover {
+main .categorias .cat-container .cat1:hover {
   transform: scale(1.1, 1.1);
   transition: 0.5s;
 }
-main .categorias .cat-container .cat1 .info-extra, main .categorias .cat-container .cat2 .info-extra, main .categorias .cat-container .cat3 .info-extra {
+main .categorias .cat-container .cat1 .info-extra {
   position: relative;
   left: 100px;
   top: 300px;
 }
-main .categorias .cat-container .cat2, main .categorias .cat-container .cat3 {
+main .categorias .cat-container .cat2 {
   grid-area: remeras;
   margin-bottom: 10px;
-  background-image: url(../../../../assest/images/remeras1.jpg);
+  background-image: url("../../assest/images/remeras1.jpg");
 }
-main .categorias .cat-container .cat2:hover, main .categorias .cat-container .cat3:hover {
+main .categorias .cat-container .cat2:hover {
   transform: scale(1.1, 1.1);
   transition: 0.5s;
 }
-main .categorias .cat-container .cat2 .info-extra, main .categorias .cat-container .cat3 .info-extra {
+main .categorias .cat-container .cat2 .info-extra {
   position: relative;
   left: 30px;
   top: 150px;
@@ -211,7 +211,7 @@ main .categorias .cat-container .cat2 .info-extra, main .categorias .cat-contain
 main .categorias .cat-container .cat3 {
   grid-area: gorros;
   margin-top: 10px;
-  background-image: url(../../../../assest/images/gorras2.jpg);
+  background-image: url("../../assest/images/gorras2.jpg");
 }
 main .categorias .cat-container .cat3:hover {
   transform: scale(1.1, 1.1);
