doy nuevos estilos a index incluyendo primeros estilos en vista tablet y mobile, nueva componente para titulos e informacion sobre las secciones en index

--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -19,5 +19,7 @@
 @import 'partials/components/header';
 //Footer
 @import 'partials/components/footer';
+//Informacion de secciones en el index
+@import 'partials/components/section-info';
 //Index
 @import 'partials/components/index';
