--- a/sass/scss/partials/components/_index.scss
+++ b/sass/scss/partials/components/_index.scss
@@ -1,131 +1,152 @@
 main{
-    .productos{
-        padding: 1rem;
-        @include flex(column, space-around, center);
-        width: 1200px;
+    .card-container{
+        @include flex(row, space-around, center);
+        flex-wrap: wrap;
+        width: 80%;
         margin: 0 auto;
-        .section-header{
-            @include flex(column, unset, center);
-        }
-        .card-container{
-            display: flex;
-            .card{
-                border-style: none;
-                margin-right: 1rem;
-                &:hover{
-                    transform: scale(1.20,1.20);
-                    transition: 0.5s;
-                    .info-producto{
-                        .link-producto{
-                            visibility: visible;
-                        }
-                    }
-                }
-                .card-img{
-                    img{
-                        @include img-size-card(280px, 280px);
-                    }
-                }
+        .card{
+            border-style: none;
+            margin-right: 1rem;
+            
+            @include mobile(){
+                width: 80%;
+                margin: 0 auto;
+            }
+            &:hover{
+                transform: scale(1.20,1.20);
+                transition: 0.5s;
                 .info-producto{
-                    width: 100%;
-                    @include flex(column, center, start);
-                    .precio-producto{
-                        p{
-                            margin-bottom: 0;
-                        }
-                    }
                     .link-producto{
-                        visibility: hidden;
-                        width: 100%;
-                        margin-bottom: 20px;
-                        a{
-                            text-decoration: none;
-                            color: black;
-                            &:hover{
-                                color: blue;
-                            }
+                        visibility: visible;
+                    }
+                }
+            }
+            .card-img{
+                img{
+                    @include img-size-card(280px, 100%);
+                }
+            }
+            .info-producto{
+                width: 100%;
+                @include flex(column, center, start);
+                .precio-producto{
+                    p{
+                        margin-bottom: 0;
+                    }
+                }
+                .link-producto{
+                    visibility: hidden;
+                    @include tablet(){
+                        visibility: visible;
+                    }
+                    width: 100%;
+                    margin-bottom: 20px;
+                    a{
+                        text-decoration: none;
+                        color: black;
+                        &:hover{
+                            color: blue;
                         }
                     }
                 }
             }
         }
     }
-    .categorias{
-        height: 1000px;
-        width: 1050px;
+
+    .cat-container{
+        height: 700px;
+        width: 80%;
         margin: 0 auto;
-        margin-bottom: 4rem;
-        .cat-container{
-            height: 100%;
-            width: 100%;
-            display: grid;
-            grid-template-areas: 
-            'head head head'
-            'buzos buzos remeras'
-            'buzos buzos remeras'
-            'buzos buzos gorros'
-            'buzos buzos gorros';
-            .section-header{
-                grid-area: head;
-                @include flex(column, center, center);
-                margin-bottom: 30px;
+        display: grid;
+        grid-template-areas: 
+        
+        'buzos buzos remeras'
+        'buzos buzos gorros'
+        ;
+        @include tablet(){
+            height: 500px;
+            width: 80%;
+            margin: 0 auto;
+        }
+        @include mobile(){
+            @include flex(column, center, center);
+            height: 800px;
+            width: 90%;
+            margin: 0 auto;
+        }
+        .cat1{
+            grid-area: buzos;
+            text-decoration: $list-style;
+            color: #000;
+            margin-right: 20px;
+            @include background-img(url('../../assest/images/buzo3.jpg'), no-repeat, cover, center);
+            @include mobile(){
+                height: 100%;
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 20px;
             }
-            .cat1{
-                grid-area: buzos;
-                text-decoration: none;
-                color: #000;
-                margin-right: 20px;
-                @include background-img(url('../../assest/images/buzo3.jpg'), no-repeat, cover, center);
-                &:hover{
-                    transform: scale(1.1,1.1);
-                    transition: 0.5s;
-                }
-                .info-extra{
-                    position: relative;
-                    left: 100px;
-                    top: 300px;
-                }
-            }
-            .cat2{
-                grid-area: remeras;
-                margin-bottom: 10px;
-                background-image: url('../../assest/images/remeras1.jpg');
-                @extend .cat1;
-                &:hover{
-                    transform: scale(1.1,1.1);
-                    transition: 0.5s;
-                }
-                .info-extra{
-                    position: relative;
-                    left: 30px;
-                    top: 150px;
-                }
-            }
-            .cat3{
-                grid-area: gorros;
-                margin-top: 10px;
-                margin-bottom: 0;
-                background-image: url('../../assest/images/gorras2.jpg');
-                @extend .cat2;
-                &:hover{
-                    transform: scale(1.1,1.1);
-                    transition: 0.5s;
-                }
-            }
-            .cat-info{
-                position: relative;
-                top: 40px;
-                left: 20px;
-                background-color: #fff;
-                font-size: 1.5em;
-                padding: 1rem;
+            &:hover{
+                transform: scale(1.1,1.1);
+                transition: 0.5s;
             }
             .info-extra{
-                display: inline;
                 position: relative;
-                top: 150px;
-                color: #fff;
+                text-align: center;
+                // left: 100px;
+                // top: 300px;
+                @include tablet(){
+                    display: none;
+                }
             }
+        }
+        .cat2{
+            grid-area: remeras;
+            margin-bottom: 10px;
+            margin-right: 0;
+            background-image: url('../../assest/images/remeras1.jpg');
+            @extend .cat1;
+            &:hover{
+                transform: scale(1.1,1.1);
+                transition: 0.5s;
+            }
+            .info-extra{
+                position: relative;
+                left: 0px;
+                top: 150px;
+                @include tablet(){
+                    display: none;
+                }
+            }
+        }
+        .cat3{
+            grid-area: gorros;
+            margin-top: 10px;
+            margin-bottom: 0;
+            background-image: url('../../assest/images/gorras2.jpg');
+            @extend .cat2;
+            &:hover{
+                transform: scale(1.1,1.1);
+                transition: 0.5s;
+            }
+        }
+        .cat-info{
+            position: relative;
+            top: 40px;
+            left: 20px;
+            background-color: #fff;
+            font-size: 1.5em;
+            padding: 1rem;
+            @include tablet(){
+                font-size: 1em;
+                position: initial;
+            }
+        }
+        .info-extra{
+            display: inline;
+            position: relative;
+            top: 150px;
+            color: #fff;
         }
     }
 }
