--- a/sass/scss/partials/components/_header.scss
+++ b/sass/scss/partials/components/_header.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 750px;
     @include background-img(url('../../assest/images/modelos-ropa4.jpg'), no-repeat, cover, center center);
+    overflow-x: hidden;
     .intro{
         position: relative;
         top: 200px;
@@ -16,6 +17,9 @@
         box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
         #nav-header-link{
             color: black;
+            @include mobile(){
+                color: white;
+            }
         }
         .carrito{
             color: black
@@ -25,17 +29,59 @@
         @include flex(row, space-around, center);
         width: 100%;
         padding: 1rem;
+        .logo{
+            img{
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+            }
+        }
+        .open-menu{
+            display: none;
+            @include mobile(){
+                display: block;
+                border: 0;
+                background-color: transparent;
+                color: white;
+                font-size: 1.25em;
+            }
+        }
         .nav-bar{
+            .visible{
+                opacity: 1;
+                visibility: visible;
+            }
+            @include mobile(){
+                visibility: hidden;
+                position: fixed;
+                height: 100%;
+                z-index: 8890;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                gap: 1rem;
+                background-color: rgb(48, 48, 48);
+                padding: 2rem;
+                @include flex(column, start, end);
+            }
+            .close-menu{
+                display: none;
+                @include mobile(){
+                    display: block;
+                    border: 0;
+                    background-color: transparent;
+                    color: white;
+                    font-size: 1.25em;
+                }
+            }
             .option-menu{
                 @include flex(row, center, center);
                 gap: 1rem;
-                .logo{
-                    img{
-                        width: 100px;
-                        height: 100px;
-                        border-radius: 50%;
-                    }
+                @include mobile(){
+                    @include flex(column, center, end);
+                    color: white;
                 }
+                
                 .option{
                     text-align: center;
                     list-style: $list-style;
@@ -66,8 +112,12 @@
                         background: none;
                         border-style: none;
                     }
+                    @include tablet(){
+                        display: none;
+                    }
                 }
             }
         }
+        
     }
 }
