agrego nueva componente para un boton de ver mas debajo de categorias en index y le doy estilos con bootsttrap; cambio estilos del footer y color del dark mode y del header

--- a/sass/scss/main.scss
+++ b/sass/scss/main.scss
@@ -21,5 +21,7 @@
 @import 'partials/components/footer';
 //Informacion de secciones en el index
 @import 'partials/components/section-info';
+//Boton de VER MAS
+@import 'partials/components/link-more-products';
 //Index
 @import 'partials/components/index';
