--- a/sass/scss/partials/components/_index.scss
+++ b/sass/scss/partials/components/_index.scss
@@ -1,6 +1,6 @@
 main{
     .dark-mode{
-        background-color: #000;
+        background-color: #1c1c1c;
         p{
             color: white;
         }
@@ -12,7 +12,7 @@ main{
         }
         .card-container{
             .card{
-                background-color: #000;
+                background-color: #1c1c1c;
                 .info-producto{
                     .link-producto{
                         a{
