--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -22,11 +22,7 @@
 .header-wrapper .fixed {
   position: fixed;
   z-index: 1;
-  background-color: white;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.header-wrapper .fixed #nav-header-link {
-  color: black;
 }
 @media screen and (max-width: 640px) {
   .header-wrapper .fixed #nav-header-link {
@@ -141,6 +137,7 @@
 .header-wrapper .menu .nav-tools .tools-list .boton-dark-mode .dark-mode-logo {
   background: none;
   border-style: none;
+  color: white;
 }
 @media screen and (max-width: 900px) {
   .header-wrapper .menu .nav-tools .tools-list .boton-dark-mode {
@@ -153,7 +150,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  margin-top: 3rem;
+  background-color: gray;
 }
 .links .options {
   width: 100%;
@@ -165,14 +162,37 @@
   font-size: 1.5em;
   padding: 1rem;
 }
+.links .options .social-media-logo a {
+  color: white;
+}
 
 .section-info {
-  margin-top: 3rem;
+  height: 150px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+}
+
+.link-more-products {
+  height: 150px;
+  width: 10%;
+  margin: 0 auto;
+  max-width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: unset;
+  align-items: center;
+  justify-content: center;
+}
+.link-more-products a {
+  text-decoration: none;
+  color: white;
+  font-size: 1em;
 }
 
 main .dark-mode {
-  background-color: #000;
+  background-color: #1c1c1c;
 }
 main .dark-mode p {
   color: white;
@@ -184,7 +204,7 @@ main .dark-mode h4 {
   color: white;
 }
 main .dark-mode .card-container .card {
-  background-color: #000;
+  background-color: #1c1c1c;
 }
 main .dark-mode .card-container .card .info-producto .link-producto a {
   color: #fff;
