--- a/sass/scss/partials/components/_footer.scss
+++ b/sass/scss/partials/components/_footer.scss
@@ -1,6 +1,6 @@
 .links{
     @include flex(row, center, center);
-    margin-top: 3rem;
+    background-color: gray;
     .options{
         @extend .links;
         width: 100%;
@@ -10,6 +10,9 @@
         .social-media-logo{
             font-size: 1.5em;
             padding: 1rem;
+            a{
+                color: white;
+            }
         }
     }
 }
