--- a/sass/scss/partials/components/_header.scss
+++ b/sass/scss/partials/components/_header.scss
@@ -13,10 +13,10 @@
     .fixed{
         position: fixed;
         z-index: 1;
-        background-color: white;
+        //background-color: white;
         box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
         #nav-header-link{
-            color: black;
+            //color: black;
             @include mobile(){
                 color: white;
             }
@@ -80,6 +80,7 @@
                 @include mobile(){
                     @include flex(column, center, end);
                     color: white;
+                    //color: rgb(41, 41, 41);
                 }
                 
                 .option{
@@ -111,6 +112,7 @@
                     .dark-mode-logo{
                         background: none;
                         border-style: none;
+                        color: white;
                     }
                     @include tablet(){
                         display: none;
