--- a/sass/scss/partials/components/_section-info.scss
+++ b/sass/scss/partials/components/_section-info.scss
@@ -1,4 +1,5 @@
 .section-info{
-    margin-top: 3rem;
-    text-align: center;
+    //margin-top: 3rem;
+    height: 150px;
+    @include flex(column, flex-end, center);
 }
